Fixing bugs progress--trail brush covered all divs when canvas size is changed.

--- a/styles/main.css
+++ b/styles/main.css
@@ -168,6 +168,10 @@ body {
     animation: trail 1s ease-out forwards;
 }
 
+@keyframes trail {
+
+}
+
 .range-container {
     width: 200px;
     height: auto;
